[package]
name = "ceo"
version = "0.1.0"
authors = ["Rod Conan <rconan@gmto.org>"]
edition = "2021"
license = "MIT"
description = "CUDA Engined Optics"
repository = "https://github.com/rconan/crseo/CEO"
documentation = "https://docs.rs/ceo"
categories = ["science", "simulation"]
keywords = ["telescope", "astronomy"]

